--- a/package.json
+++ b/package.json
@@ -15,6 +15,15 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@types/cookie-session": "^2.0.44",
+    "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
+    "cookie-session": "^2.0.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.11.1",
+    "jsonwebtoken": "^8.5.1"
+  },
   "devDependencies": {
     "del-cli": "^5.0.0",
     "typescript": "^4.8.4"
