--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "cookie-session": "^2.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.11.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "node-nats-streaming": "^0.3.2"
   },
   "devDependencies": {
     "del-cli": "^5.0.0",
